<resources>
    <string name="app_name">NUMAD21Fa_YuluYang</string>
    <string name="about_toast">Name: Yulu Yang\nEmail: yang.yulu@northeastern.edu</string>
    <string name="pressed_format">Pressed: %1$s</string>
    <string name="hello">Hello World!</string>
    <string name="clickbtn_text">Clicky Clicky</string>
    <string name="about">About</string>
    <string name="a_btn">A</string>
    <string name="b_btn">B</string>
    <string name="c_btn">C</string>
    <string name="d_btn">D</string>
    <string name="e_btn">E</string>
    <string name="f_btn">F</string>
    <string name="pressed_text">Pressed: - </string>
    <string name="link_collector">Link Collector</string>
    <string name="empty_name">Failed: name can not be empty</string>
    <string name="empty_url">Failed: url can not be empty</string>
    <string name="invalid_url">Failed: Invalid Url, please re-enter</string>
    <string name="succeed">Add Succeed</string>
    <string name="locator">Locator</string>
    <string name="title">Search 7 Day Weather Forecast For a City</string>
    <string name="weather">Weather Forecast</string>
    <string name="request_failed">Http Request Failed, Please Retry!</string>
    <string-array name="cities">
        <item>Boston</item>
        <item>San Francisco</item>
        <item>Los Angeles</item>
        <item>New York</item>
        <item>Seattle</item>
    </string-array>

</resources>