<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clicky_clicky"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:inputType = "textCapWords" />

    <Button
        android:id="@+id/clicky_clicky"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:inputType="textCapWords"
        android:onClick="onClick"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/clickbtn_text"
        app:layout_constraintBottom_toTopOf="@id/locator"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/link_collector"
        app:layout_constraintTop_toBottomOf="@id/hello" />

    <Button
        android:id="@+id/link_collector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/link_collector"
        app:layout_constraintLeft_toRightOf="@id/clicky_clicky"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hello"
        app:layout_constraintBottom_toTopOf="@id/locator"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:background="@drawable/btn_selector"
        android:onClick="onClick"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType = "textCapWords" />

    <Button
        android:id="@+id/locator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/locator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/aboutBtn"
        app:layout_constraintTop_toBottomOf="@id/clicky_clicky"
        app:layout_constraintBottom_toTopOf="@id/newBtn"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:background="@drawable/btn_selector"
        android:onClick="onClick"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType = "textCapWords" />

    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/locator"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clicky_clicky"
        app:layout_constraintBottom_toTopOf="@id/newBtn"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:background="@drawable/btn_selector"
        android:text="@string/about"
        android:onClick="onClick"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType = "textCapWords" />

    <Button
        android:id="@+id/newBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_selector"
        android:text="@string/weather"
        android:onClick="onClick"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType = "textCapWords" />

</androidx.constraintlayout.widget.ConstraintLayout>